<resources>
    <string name="app_name">Incidents</string>
    <string name="title_activity_maps">Incidents</string>
    <string name="added_pin">Added Incident</string>
    <string name="select_incident_type">SELECT INCIDENT TYPE</string>
    <string name="others">Others</string>
    <string name="fire">Fire</string>
    <string name="road_construction">Road Construction</string>
    <string name="crime_theft">Crime/Theft</string>
    <string name="road_block">Road Block</string>
    <string name="accident">Accident</string>
    <string name="next">NEXT</string>
    <string name="cancel">CANCEL</string>
    <string name="incident_type">Incident Type:</string>
    <string name="location">Coordinates:</string>
    <string name="description">Description:</string>
    <string name="enter_incident_description">Enter description</string>
    <string name="report">REPORT</string>
    <string name="describe_incident">Describe Incident</string>
</resources>